--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -28,9 +28,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.10",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@turbocell/db": "workspace:*",
-    "next-auth": "5.0.0-beta.4",
+    "next-auth": "^4.24.5",
     "nodemailer": "^6.9.7"
   },
   "devDependencies": {
