--- a/apps/express-server/package.json
+++ b/apps/express-server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc && tsc-alias ./src/index.ts",
-    "build:watch": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\"",
+    "build": "dotenv -e ../../.env tsc && tsc-alias ./src/index.ts",
+    "build:watch": "dotenv -e ../../.env concurrently --kill-others \"tsc -w\" \"tsc-alias -w\"",
     "clean": "rm -rf dist && rm -rf tsconfig.tsbuildinfo",
     "dev": "nodemon --noEmit --exec \"node -r esbuild-register ./src/index.ts\" -e .ts",
     "lint": "tsc --noEmit && eslint \"src/**/*.ts*\"",
@@ -25,6 +25,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.2.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "formidable": "^3.5.1",
