--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 
-DATABASE_URL=postgresql://dev:dev@localhost:5432/turbocell?schema=public
+DATABASE_URL=postgresql://dev:dev@localhost:5432/repo?schema=public
 
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
