--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.9",
-    "@turbocell/trpc": "workspace:*",
-    "@turbocell/api": "workspace:*",
-    "@turbocell/auth": "workspace:*",
-    "@turbocell/db": "workspace:*",
-    "@turbocell/tailwind-config": "workspace:*",
-    "@turbocell/ui": "workspace:*",
-    "@turbocell/utils": "workspace:*",
+    "@repo/trpc": "workspace:*",
+    "@repo/api": "workspace:*",
+    "@repo/auth": "workspace:*",
+    "@repo/db": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "@repo/utils": "workspace:*",
     "autoprefixer": "^10.4.16",
     "million": "2.6.0-beta.12",
     "next": "14.0.1",
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "@trpc/server": "^10.38.5",
-    "@turbocell/eslint-config": "workspace:*",
-    "@turbocell/tsconfig": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "@types/node": "^20.8.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
