--- a/apps/express-server/tsconfig.json
+++ b/apps/express-server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@turbocell/tsconfig/base.json",
+  "extends": "@repo/tsconfig/base.json",
   "compilerOptions": {
     "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
     "rootDir": "./src",
