--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@turbocell/trpc",
+  "name": "@repo/trpc",
   "version": "0.0.0",
   "private": true,
   "main": "./index.ts",
@@ -17,17 +17,17 @@
     "@trpc/client": "^10.38.5",
     "@trpc/react-query": "^10.38.5",
     "@trpc/server": "^10.38.5",
-    "@turbocell/api": "workspace:*",
-    "@turbocell/auth": "workspace:*",
-    "@turbocell/db": "workspace:*",
+    "@repo/api": "workspace:*",
+    "@repo/auth": "workspace:*",
+    "@repo/db": "workspace:*",
     "react": "^18",
     "superjson": "1.13.3",
     "trpc-openapi": "^1.2.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@turbocell/eslint-config": "workspace:*",
-    "@turbocell/tsconfig": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "@types/node": "20.8.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
