--- a/apps/dashboard/tsconfig.json
+++ b/apps/dashboard/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@turbocell/tsconfig/nextjs.json",
+  "extends": "@repo/tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
