--- a/apps/express-server/package.json
+++ b/apps/express-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@turbocell/express-server",
+  "name": "@repo/express-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
@@ -16,9 +16,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@turbocell/api": "workspace:*",
-    "@turbocell/db": "workspace:*",
-    "@turbocell/trpc-express": "workspace:*",
+    "@repo/api": "workspace:*",
+    "@repo/db": "workspace:*",
+    "@repo/trpc-express": "workspace:*",
     "@types/formidable": "^3.4.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -36,8 +36,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@turbocell/eslint-config": "workspace:*",
-    "@turbocell/tsconfig": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.3",
     "@types/cookie-parser": "^1.4.4",
