--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turbocell-mainapp",
+  "name": "repo-mainapp",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@trpc/server": "^10.38.5",
-    "@turbocell/api": "workspace:*",
-    "@turbocell/auth": "workspace:*",
-    "@turbocell/db": "workspace:*",
-    "@turbocell/tailwind-config": "workspace:*",
-    "@turbocell/trpc": "workspace:*",
-    "@turbocell/ui": "workspace:*",
-    "@turbocell/utils": "workspace:*",
+    "@repo/api": "workspace:*",
+    "@repo/auth": "workspace:*",
+    "@repo/db": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/trpc": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "@repo/utils": "workspace:*",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
@@ -33,8 +33,8 @@
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.9",
-    "@turbocell/eslint-config": "workspace:*",
-    "@turbocell/tsconfig": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "@types/node": "20.8.0",
     "eslint": "^8.50.0",
     "postcss": "^8.4.26",
