--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turbocell",
+  "name": "repo",
   "private": true,
   "engines": {
     "node": ">=v18.18.0"
@@ -24,8 +24,8 @@
     "@turbo/gen": "^1.10.14",
     "turbo": "^1.10.14",
     "prettier": "^3.0.3",
-    "@turbocell/eslint-config": "workspace:*",
-    "@turbocell/tsconfig": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "eslint": "^8.50.0",
     "typescript": "^5.2.2"
   }
