--- a/packages/trpc-express/package.json
+++ b/packages/trpc-express/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@turbocell/trpc-express",
+  "name": "@repo/trpc-express",
   "version": "0.0.0",
   "private": true,
   "main": "./index.ts",
@@ -15,8 +15,8 @@
     "@next/eslint-plugin-next": "^13.5.4",
     "@trpc/client": "^10.38.5",
     "@trpc/server": "^10.38.5",
-    "@turbocell/api": "workspace:*",
-    "@turbocell/db": "workspace:*",
+    "@repo/api": "workspace:*",
+    "@repo/db": "workspace:*",
     "express-session": "^1.17.3",
     "react": "^18",
     "superjson": "1.13.3",
@@ -25,8 +25,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "@turbocell/eslint-config": "workspace:*",
-    "@turbocell/tsconfig": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "@types/express": "^4.17.19",
     "@types/express-session": "^1.17.8",
     "@types/node": "20.8.0",
