--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@turbocell/ui",
+  "name": "@repo/ui",
   "version": "0.0.0",
   "main": "index.ts",
   "types": "index.ts",
@@ -29,7 +29,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.10.7",
     "@radix-ui/react-dialog": "^1.0.4",
-    "@turbocell/utils": "workspace:*",
+    "@repo/utils": "workspace:*",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -48,9 +48,9 @@
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
-    "@turbocell/eslint-config": "workspace:*",
-    "@turbocell/tailwind-config": "workspace:*",
-    "@turbocell/tsconfig": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "@types/node": "20.8.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
