--- a/tooling/eslint/package.json
+++ b/tooling/eslint/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@turbocell/eslint-config",
+  "name": "@repo/eslint-config",
   "version": "0.0.0",
   "type": "commonjs",
   "files": [
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "canary",
-    "@turbocell/tsconfig": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "@vercel/style-guide": "^4.0.2",
