--- a/tooling/eslint/tsconfig.json
+++ b/tooling/eslint/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@turbocell/tsconfig/base.json",
+  "extends": "@repo/tsconfig/base.json",
   "compilerOptions": {
     "allowJs": true,
     "module": "ESNext",
