--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@turbocell/tailwind-config",
+  "name": "@repo/tailwind-config",
   "version": "0.0.0",
   "private": true,
   "main": "index.js",
