refactoring, add login with github

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,6 @@ NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
 # use  openssl rand -base64 32
 NEXTAUTH_SECRET=
-EXPRESS_SECRET=
 
 # get keys from https://console.cloud.google.com/
 GOOGLE_CLIENT_ID=
@@ -16,7 +15,8 @@ GOOGLE_CLIENT_SECRET=
 DISCORD_CLIENT_ID=
 DISCORD_CLIENT_SECRET=
 
-# get keys from https://developers.facebook.com/apps
-FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
+# get keys from https://github.com/
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
 
