--- a/.dockerignore
+++ b/.dockerignore
@@ -27,13 +27,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.example
+.env*
 
 # turbo
 .turbo
 
-
-.env
+README.md
