Upload to s3 bucket and server via cloudfront CDN

--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,16 @@ DISCORD_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
+# for login with email
 EMAIL_SERVER_HOST=
 EMAIL_SERVER_PORT=
 EMAIL_SERVER_USER=
 EMAIL_SERVER_PASSWORD=
 EMAIL_FROM=
+
+# to upload image to s3 bucket and server via cloudfront CDN
+BUCKET_NAME= 
+ACCESS_KEY_ID= 
+ACCESS_SECRET= 
+REGION= 
+CLOUDFRONT_URL=
