setup sentry for error management

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,10 @@ ACCESS_KEY_ID=
 ACCESS_SECRET= 
 REGION= 
 CLOUDFRONT_URL=
+
+# Error Management
+SENTRY_AUTH_TOKEN=
+SENTRY_ORG=
+SENTRY_PROJECT=
+
+NEXT_PUBLIC_SENTRY_DSN=
