--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@trpc/server": "^10.38.5",
     "@repo/api": "workspace:*",
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/trpc": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@sentry/nextjs": "^8",
+    "@trpc/server": "^10.38.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
@@ -30,10 +31,10 @@
     "zod": "^3.22.3"
   },
   "devDependencies": {
-    "@tailwindcss/container-queries": "^0.1.1",
-    "@tailwindcss/typography": "^0.5.9",
     "@repo/eslint-config": "workspace:*",
     "@repo/tsconfig": "workspace:*",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.8.0",
     "eslint": "^8.50.0",
     "postcss": "^8.4.26",
