update sentry, add posthog for analytics

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.16",
     "clsx": "^2.0.0",
     "next": "14.0.1",
+    "posthog-js": "^1.131.4",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
