--- a/.env.example
+++ b/.env.example
@@ -37,5 +37,10 @@ CLOUDFRONT_URL=
 SENTRY_AUTH_TOKEN=
 SENTRY_ORG=
 SENTRY_PROJECT=
+SENTRY_PROJECT_ID=
 
 NEXT_PUBLIC_SENTRY_DSN=
+
+# Product Analytics
+NEXT_PUBLIC_POSTHOG_KEY=
+NEXT_PUBLIC_POSTHOG_HOST=
