work with session, adds rate limit to upload image

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-
 DATABASE_URL=postgresql://dev:dev@localhost:5432/repo?schema=public
 
 NEXTAUTH_URL=http://localhost:3000
@@ -26,11 +25,12 @@ EMAIL_SERVER_USER=
 EMAIL_SERVER_PASSWORD=
 EMAIL_FROM=
 
-# to upload image to s3 bucket and server via cloudfront CDN
+# Upload image to s3 bucket 
 BUCKET_NAME= 
 ACCESS_KEY_ID= 
 ACCESS_SECRET= 
 REGION= 
+# Serve via CDNs
 CLOUDFRONT_URL=
 
 # Error Management
@@ -44,3 +44,7 @@ NEXT_PUBLIC_SENTRY_DSN=
 # Product Analytics
 NEXT_PUBLIC_POSTHOG_KEY=
 NEXT_PUBLIC_POSTHOG_HOST=
+
+# Rate Limiting
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
