--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,7 +19,10 @@
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
     "@trpc/server": "^10.38.5",
+    "@upstash/ratelimit": "^1.1.3",
+    "@upstash/redis": "^1.31.1",
     "axios": "^1.6.8",
+    "next": "^14.2.3",
     "react": "^18",
     "superjson": "1.13.3",
     "zod": "^3.22.4"
