--- a/packages/db/turbo.json
+++ b/packages/db/turbo.json
@@ -1,29 +1,35 @@
 {
-    "extends": ["//"],
-    "pipeline": {
-      "db:generate": {
-        "outputs": ["../../node_modules/.prisma/**"],
-        "outputMode": "new-only"
-      },
-      "db:deploy": {
-        "cache": false
-      },
-      "db:push": {
-        "cache": false
-      },
-      "db:reset": {
-        "cache": false
-      },
-      "db:seed": {
-        "dependsOn": ["db:push"],
-        "cache": false
-      },
-      "db:prod:seed": {
-        "dependsOn": ["db:push"],
-        "cache": false
-      },
-      "db:studio": {
-        "cache": false
-      }
+  "extends": ["//"],
+  "pipeline": {
+    "db:generate": {
+      "outputs": ["../../node_modules/.prisma/**"],
+      "outputMode": "new-only"
+    },
+    "db:migrate": {
+      "cache": false
+    },
+    "db:migrate:deploy": {
+      "cache": false
+    },
+    "db:deploy": {
+      "cache": false
+    },
+    "db:push": {
+      "cache": false
+    },
+    "db:reset": {
+      "cache": false
+    },
+    "db:seed": {
+      "dependsOn": ["db:push"],
+      "cache": false
+    },
+    "db:prod:seed": {
+      "dependsOn": ["db:push"],
+      "cache": false
+    },
+    "db:studio": {
+      "cache": false
     }
   }
+}
