--- a/turbo.json
+++ b/turbo.json
@@ -54,6 +54,12 @@
     "db:generate": {
       "cache": false
     },
+    "db:migrate": {
+      "cache": false
+    },
+    "db:migrate:deploy": {
+      "cache": false
+    },
     "db:push": {
       "cache": false
     }
