--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,10 +22,12 @@
     "@upstash/ratelimit": "^1.1.3",
     "@upstash/redis": "^1.31.1",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "next": "^14.2.3",
     "react": "^18",
+    "server-only": "^0.0.1",
     "superjson": "1.13.3",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
