--- a/apps/dashboard/tsconfig.json
+++ b/apps/dashboard/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@repo/tsconfig/nextjs.json",
   "compilerOptions": {
+    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
     "baseUrl": "./",
     "paths": {
       "@/*": ["./*"]
