--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "repo",
-  "private": true,
+  "name": "@meimfhd/create-turbocell",
+  "version": "1.0.3",
   "author": "me-imfhd",
+  "bin": "./bin/cli.js",
   "keywords": [
     "stater-kit",
     "turborepo",
@@ -39,11 +40,9 @@
   "dependencies": {
     "@manypkg/cli": "^0.21.0",
     "@turbo/gen": "^1.10.14",
-    "turbo": "^1.10.14",
-    "prettier": "^3.0.3",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/tsconfig": "workspace:*",
     "eslint": "^8.50.0",
+    "prettier": "^3.0.3",
+    "turbo": "^1.10.14",
     "typescript": "^5.2.2"
   }
 }
